Add travis, coveralls and code climate services.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,7 +1,7 @@
 # Default Settings
 databases:
   host: localhost
-  database: getit_test
+  database: nyu_getit_test
   username: root
   password:
 
