Don't test jruby on travis for now, since we're not using jruby in prod :collision:

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
 
 rvm:
   - 1.9.3
-  - jruby-19mode # JRuby (1.9)
+  # - jruby-19mode # JRuby (1.9)
   # - rbx-19mode
   - 2.0.0
   
