--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -309,6 +309,20 @@ NYU:
           existing_type: fulltext
       service_types:
           - document_delivery
+NYUSH:
+  name: NYU Shanghai Library
+  parent_code: NYU
+  views:
+    css: search_nyush
+    resolve_css: resolve_nyush
+    wayfinder_attributes:
+      primo:
+        url_suffix: "?institution=nyush"
+      xerxes:
+        url_suffix: "&institution=nyush"
+      umlaut:
+        url_suffix: "/nyuad"
+  ip_addresses: <%= Settings.institutions.NYUSH.ip_addresses %>
 NYUAD:
   name: NYU Abu Dhabi Library
   parent_code: NYU
