--- a/test/vcr_cassettes/search_journal_list_logged_in.yml
+++ b/test/vcr_cassettes/search_journal_list_logged_in.yml
@@ -1,73 +1,32 @@
----
-http_interactions:
-- request:
+--- 
+http_interactions: 
+- request: 
     method: post
-    uri: http://localhost:8981/select?wt=ruby
-    body:
+    uri: http://DUMMY_SOLR_INSTANCE/select?wt=ruby
+    body: 
       encoding: US-ASCII
       string: fq=type%3ASfx4%5C%3A%5C%3ALocal%5C%3A%5C%3AAzTitle&fq=letter_group_sm%3AA&sort=title_sort_s+asc&start=0&rows=20&q=%2A%3A%2A
-    headers:
-      Content-Type:
+    headers: 
+      Content-Type: 
       - application/x-www-form-urlencoded; charset=UTF-8
-  response:
-    status:
+  response: 
+    status: 
       code: 200
       message: OK
-    headers:
-      Server:
+    headers: 
+      Server: 
       - Apache-Coyote/1.1
-      Content-Type:
+      Content-Type: 
       - text/plain;charset=UTF-8
-      Transfer-Encoding:
+      Transfer-Encoding: 
       - chunked
-      Date:
-      - Thu, 31 Jan 2013 04:28:14 GMT
-      Connection:
+      Date: 
+      - Fri, 06 Sep 2013 17:26:37 GMT
+      Connection: 
       - close
-    body:
-      encoding: US-ASCII
-      string: ! '{''responseHeader''=>{''status''=>0,''QTime''=>0,''params''=>{''sort''=>''title_sort_s
-        asc'',''wt''=>''ruby'',''rows''=>''20'',''start''=>''0'',''q''=>''*:*'',''fq''=>[''type:Sfx4\\:\\:Local\\:\\:AzTitle'',''letter_group_sm:A'']}},''response''=>{''numFound''=>10825,''start''=>0,''docs''=>[{''id''=>''Sfx4::Local::AzTitle
-        94682'',''object_id_ss''=>''3460000000080718'',''title_display_ss''=>''A.A.H.P.S.S.S.
-        news and information'',''issn_ss''=>''0158-9040'',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        47044'',''object_id_ss''=>''111077820649098'',''title_display_ss''=>''A.A.O.
-        newsletter'',''issn_ss''=>''0728-5833'',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        46789'',''object_id_ss''=>''2320000000018368'',''title_display_ss''=>''A.A.V.
-        newsletter'',''issn_ss''=>''2154-6312'',''isbn_ss''=>'''',''lccn_ss''=>''sn85010192''},{''id''=>''Sfx4::Local::AzTitle
-        91425'',''object_id_ss''=>''3310000000008350'',''title_display_ss''=>''A and
-        D Intelligence'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        11857'',''object_id_ss''=>''110978966555982'',''title_display_ss''=>''The
-        A/C flyer'',''issn_ss''=>''0194-8652'',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        42312'',''object_id_ss''=>''1000000000277911'',''title_display_ss''=>''A contrario'',''issn_ss''=>''1660-7880'',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        118629'',''object_id_ss''=>''110978979594943'',''title_display_ss''=>''A D
-        A update'',''issn_ss''=>''1071-7382'',''isbn_ss''=>'''',''lccn_ss''=>''sn93003041''},{''id''=>''Sfx4::Local::AzTitle
-        116922'',''object_id_ss''=>''1000000000223373'',''title_display_ss''=>''A
-        & G Information Service'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        54875'',''object_id_ss''=>''2670000000147550'',''title_display_ss''=>''A&G
-        Information Services'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        42453'',''object_id_ss''=>''1000000000419525'',''title_display_ss''=>''A&G
-        Information Services: Comtex'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        61402'',''object_id_ss''=>''110985822450838'',''title_display_ss''=>''A.I.B.S.
-        bulletin'',''issn_ss''=>''0096-7645'',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        56514'',''object_id_ss''=>''2560000000074684'',''title_display_ss''=>''A.I.H.P.
-        notes'',''issn_ss''=>''2161-5403'',''isbn_ss''=>'''',''lccn_ss''=>''2011200219''},{''id''=>''Sfx4::Local::AzTitle
-        780'',''object_id_ss''=>''991042731854546'',''title_display_ss''=>''A.I.O.N.
-        Annali dell\''Istituto Universitario Orientale di Napoli. Dipartimento di
-        studi del mondo classico e del Mediterraneo Antico. Sezione filologico-letteraria'',''issn_ss''=>''1128-7209'',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        36929'',''object_id_ss''=>''991042742947116'',''title_display_ss''=>''A.M.A.
-        archives of dermatology'',''issn_ss''=>''0096-5359'',''isbn_ss''=>'''',''lccn_ss''=>''sf98085585''},{''id''=>''Sfx4::Local::AzTitle
-        11400'',''object_id_ss''=>''991042742058796'',''title_display_ss''=>''A.M.A.
-        archives of general psychiatry'',''issn_ss''=>''0375-8532'',''isbn_ss''=>'''',''lccn_ss''=>''2011263036''},{''id''=>''Sfx4::Local::AzTitle
-        76400'',''object_id_ss''=>''991042744489168'',''title_display_ss''=>''A.M.A.
-        archives of industrial health'',''issn_ss''=>''0567-3933'',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        117348'',''object_id_ss''=>''991042724395194'',''title_display_ss''=>''A.M.A.
-        archives of internal medicine'',''issn_ss''=>''0888-2479'',''isbn_ss''=>'''',''lccn_ss''=>''53039642''},{''id''=>''Sfx4::Local::AzTitle
-        58226'',''object_id_ss''=>''991042723389346'',''title_display_ss''=>''A.M.A.
-        archives of ophthalmology'',''issn_ss''=>''0096-6339'',''isbn_ss''=>'''',''lccn_ss''=>''''},{''id''=>''Sfx4::Local::AzTitle
-        106163'',''object_id_ss''=>''991042744298710'',''title_display_ss''=>''A.M.A.
-        archives of pathology'',''issn_ss''=>''0096-6711'',''isbn_ss''=>'''',''lccn_ss''=>''sn82003912''},{''id''=>''Sfx4::Local::AzTitle
-        108876'',''object_id_ss''=>''991042744299716'',''title_display_ss''=>''A.M.A.
-        archives of surgery'',''issn_ss''=>''0096-6908'',''isbn_ss''=>'''',''lccn_ss''=>''22011929''}]}}'
+    body: 
+      encoding: ASCII-8BIT
+      string: "{'responseHeader'=>{'status'=>0,'QTime'=>0,'params'=>{'sort'=>'title_sort_s asc','wt'=>'ruby','rows'=>'20','start'=>'0','q'=>'*:*','fq'=>['type:Sfx4\\\\:\\\\:Local\\\\:\\\\:AzTitle','letter_group_sm:A']}},'response'=>{'numFound'=>11735,'start'=>0,'docs'=>[{'id'=>'Sfx4::Local::AzTitle 51252','object_id_ss'=>'3460000000080718','title_display_ss'=>'A.A.H.P.S.S.S. news and information','issn_ss'=>'0158-9040','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 91452','object_id_ss'=>'111077820649098','title_display_ss'=>'A.A.O. newsletter','issn_ss'=>'0728-5833','isbn_ss'=>'','lccn_ss'=>'2004201738'},{'id'=>'Sfx4::Local::AzTitle 91306','object_id_ss'=>'2320000000018368','title_display_ss'=>'A.A.V. newsletter','issn_ss'=>'2154-6312','isbn_ss'=>'','lccn_ss'=>'sn85010192'},{'id'=>'Sfx4::Local::AzTitle 115388','object_id_ss'=>'3310000000008350','title_display_ss'=>'A and D Intelligence','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 13120','object_id_ss'=>'1000000000319433','title_display_ss'=>'\xC3\x80 b\xC3\xA2bord','issn_ss'=>'1710-209X','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 17562','object_id_ss'=>'2670000000312291','title_display_ss'=>'A+BE :  Architecture and the Built Environment','issn_ss'=>'2212-3202','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 6252','object_id_ss'=>'110978966555982','title_display_ss'=>'The A/C flyer','issn_ss'=>'0194-8652','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 22843','object_id_ss'=>'1000000000277911','title_display_ss'=>'A contrario','issn_ss'=>'1660-7880','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 64186','object_id_ss'=>'110978979594943','title_display_ss'=>'A D A update','issn_ss'=>'1071-7382','isbn_ss'=>'','lccn_ss'=>'sn93003041'},{'id'=>'Sfx4::Local::AzTitle 20464','object_id_ss'=>'991042734462458','title_display_ss'=>'A F E A S, Association f\xC3\xA9minine d\\'\xC3\xA9ducation et d\\'action sociale','issn_ss'=>'0381-7598','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 63300','object_id_ss'=>'1000000000223373','title_display_ss'=>'A & G Information Service','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 95671','object_id_ss'=>'2670000000147550','title_display_ss'=>'A&G Information Services','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 22919','object_id_ss'=>'1000000000419525','title_display_ss'=>'A&G Information Services: Comtex','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 33203','object_id_ss'=>'110985822450838','title_display_ss'=>'A.I.B.S. bulletin','issn_ss'=>'0096-7645','isbn_ss'=>'','lccn_ss'=>'2005236975'},{'id'=>'Sfx4::Local::AzTitle 96571','object_id_ss'=>'2560000000074684','title_display_ss'=>'A.I.H.P. notes','issn_ss'=>'2161-5403','isbn_ss'=>'','lccn_ss'=>'2011200219'},{'id'=>'Sfx4::Local::AzTitle 66409','object_id_ss'=>'991042731854546','title_display_ss'=>'A.I.O.N. Annali dell\\'Istituto Universitario Orientale di Napoli. Dipartimento di studi del mondo classico e del Mediterraneo Antico. Sezione filologico-letteraria','issn_ss'=>'1128-7209','isbn_ss'=>'','lccn_ss'=>'94650402'},{'id'=>'Sfx4::Local::AzTitle 54231','object_id_ss'=>'3330000000000357','title_display_ss'=>'A.M.A. American Journal of diseases of children','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>''},{'id'=>'Sfx4::Local::AzTitle 19894','object_id_ss'=>'991042742947116','title_display_ss'=>'A.M.A. archives of dermatology','issn_ss'=>'0096-5359','isbn_ss'=>'','lccn_ss'=>'sf98085585'},{'id'=>'Sfx4::Local::AzTitle 42327','object_id_ss'=>'991042742947136','title_display_ss'=>'A.M.A. archives of dermatology and syphilology','issn_ss'=>'0096-5979','isbn_ss'=>'','lccn_ss'=>'sf98085584'},{'id'=>'Sfx4::Local::AzTitle 5991','object_id_ss'=>'991042742058796','title_display_ss'=>'A.M.A. archives of general psychiatry','issn_ss'=>'0375-8532','isbn_ss'=>'','lccn_ss'=>'2011263036'}]}}"
     http_version: 
-  recorded_at: Thu, 31 Jan 2013 04:28:14 GMT
+  recorded_at: Fri, 06 Sep 2013 17:26:38 GMT
 recorded_with: VCR 2.4.0
