--- a/config/settings.yml
+++ b/config/settings.yml
@@ -39,6 +39,7 @@ sfx_databases: {}
 institutions:
   default:
     views:
+      gauges_tracking_code: trackme
       sfx_base_url: "http://sfx.library.nyu.edu/sfxlcl41?"
     services:
       NYU_Primo:
