--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -16,7 +16,7 @@ default:
     NYU_Primo:
       type: PrimoService
       priority: 2 # After SFX, to get SFX metadata enhancement
-      base_url: "<%= Settings.institutions.default.services.NYU_Primo.base_url %>"
+      base_url: "<%= Exlibris::Primo.config.base_url %>"
       vid: NYU
       institution: NYU
       holding_search_institution: NYU
@@ -83,7 +83,7 @@ default:
     NYU_Primo_Source:
       type: PrimoSource
       priority: a
-      base_url: <%= Settings.institutions.default.services.NYU_Primo_Source.base_url %>
+      base_url: <%= Exlibris::Primo.config.base_url %>
       vid: NYU
       source_attributes:
         - request_link_supports_ajax_call
