Update BobCat wayfinder to say "Back to results"

--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -55,7 +55,7 @@ default:
           name: primo
           regex: !ruby/regexp '/info:sid\/primo\.exlibrisgroup\.com:primo-(.+)/'
           base_url: "http://library.nyu.edu/persistent/lcn/"
-          display_text: Back to BobCat
+          display_text: Back to results
         -
           name: xerxes
           regex: !ruby/regexp '/info:sid\/library\.nyu\.edu:xerxes \((.+)\)/'
