Add bib tool services type and section.  Hide question mark. Remove NYU customized font size variables. Increase resolution title to 22px to mimic JHU (actually, they use 20px as the default line height).

--- a/config/umlaut_service_type_values.yml
+++ b/config/umlaut_service_type_values.yml
@@ -1,3 +1,8 @@
 wayfinder:
   id: 100000
   display_name: Return Whence You Came
+
+bib_tool:
+  id: 100001
+  display_name: Bibliographic Tool
+  display_name_plural: Bibliographic Tools
